--- a/css/b.css
+++ b/css/b.css
@@ -120,7 +120,9 @@
         cursor: pointer;
         vertical-align: middle;
       }
-
+      .none-shacow{
+        box-shadow: none !important;
+      }
       /* Content section mejorada */
       .content-section {
         background: transparent;
