Integration of service view and localstorage for transaction view.

--- a/css/h.css
+++ b/css/h.css
@@ -21,6 +21,13 @@
       overflow-x: hidden;
       color: white;
     }
+.seccion {
+  display: none;
+}
+
+.seccion.activa {
+  display: block;
+}
 
     /* Header container original */
     .header-container {
